...
            "value" : "Neue Gewohnheit hinzufügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add new habit"
          }
        }
      }
    },
    "accessibilityCalendarDay" : {
      "extractionState" : "manual",
...
    "common.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "common.tryAgain" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "Get tips for better habits"
          }
        }
      }
    },
    "Get Started" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Los geht's"
...
      "isCommentAutoGenerated" : true
    },
    "Habit Logs:" : {
      "comment" : "A label for the number of habit logs in the database.",
      "isCommentAutoGenerated" : true
    },
    "Habits" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gewohnheiten"
...
    "onboarding.continue" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        }
      }
    },
    "onboarding.customize_description" : {
      "extractionState" : "manual",
...
    "onboarding.skip" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Skip"
          }
        }
      }
    },
    "onboarding.skip_notifications" : {
      "extractionState" : "manual",
...
